# PIC_Test_Project

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  SConstruct  compile.py  compile_v2.py  compile_xc8.ps1  docker-compose.yml  ipecmd.sh  logger.py  platformio.ini  run_python.bat  upload.py  upload_pickit3.ps1
.devcontainer/: Dockerfile  README.md  devcontainer.json  launch-mplab.sh  post-create.sh  troubleshoot.sh
draft/: compile_v2.py  ipecmd.ps1  ipecmd.sh
src/: main.c
src/asm-simple/: main.s
src/cpp-multi/: COMPARISON.md  PROJECT_SUMMARY.md  README.md  build.py  manual_transpile.py  transpile.py
src/cpp-multi/generated_c/: button.c  button.h  led.c  led.h  main.c  timer0.c  timer0.h
src/multi/: device_config.c  device_config.h  main.c  monolithic_vs_separated_compilation.mermaid  timer0.c  timer0.h
src/simple/: main.c
xc8_wrapper/: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  demo.py  pyproject.toml
xc8_wrapper/tests/: test_cli.py  test_core.py
xc8_wrapper/xc8_wrapper/: __init__.py  cli.py  core.py
