[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xc8-wrapper"
version = "0.1.0"
description = "XC8 Toolchain Wrapper for PIC Microcontrollers"
authors = [
    {name = "Sébastien Celles", email = "s.celles@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["xc8", "pic", "microcontroller", "embedded", "compilation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "colorama>=0.4.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/s-celles/xc8-wrapper"
Repository = "https://github.com/s-celles/xc8-wrapper"
Issues = "https://github.com/s-celles/xc8-wrapper/issues"

[project.scripts]
xc8-wrapper = "xc8_wrapper.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xc8_wrapper*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
